# dedupeplusplus

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
core/: duplicate_finder.hpp  filesystem_tree.hpp  hasher.cpp  hasher.hpp  main.cpp  nested_node.hpp  nested_tree.hpp  scanner.cpp  scanner.hpp
include/: progress.hpp
interface/: iscanner.hpp  scanner_impl.cpp  scanner_impl.hpp
src/: hasher.cpp  main.cpp
tests/: duplicate_finder_test.cpp  filesystem_tree_test.cpp  nested_tree_test.cpp  tree_tests.cpp
ui/: filesystem_model.cpp  filesystem_model.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp
